@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-14T02:08:10Z",
+  "timestamp" : "2022-05-14T08:26:55Z",
   "count_outdated" : 199,
   "uniques_outdated" : 40,
-  "count" : 218,
-  "uniques" : 45,
+  "count" : 219,
+  "uniques" : 46,
   "views" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
