@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 1,
   "views": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
